src/objects/QuestionResponse__c.object
<CustomObject>
    <fields>
        <fullName>IsCorrect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Correct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModuleResponse__c</fullName>
        <label>Module Response</label>
        <referenceTo>ModuleResponse__c</referenceTo>
        <relationshipLabel>Questions Reponses</relationshipLabel>
        <relationshipName>QuestionResponses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NumberOfAttempt__c</fullName>
        <label>Number of Attempt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PartialGradeValue__c</fullName>
        <label>Partial Grade Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Questions Responses</relationshipLabel>
        <relationshipName>QuestionsResponses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TextValue__c</fullName>
        <label>Text Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Question Response</label>
    <nameField>
        <displayFormat>QR-{00000000}</displayFormat>
        <label>Question Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions Reponses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ValidateAttemptNumber</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(NumberOfAttempt__c)),NumberOfAttempt__c &gt; ModuleResponse__r.Module__r.AttemptsAllowedPerQuestion__c)</errorConditionFormula>
        <errorMessage>You have reached the limit of attempts for this question.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateSameModule</fullName>
        <active>true</active>
        <errorConditionFormula>Question__r.Module__c !=  ModuleResponse__r.Module__c</errorConditionFormula>
        <errorMessage>The related question doesn&apos;t belong to this module.</errorMessage>
    </validationRules>
</CustomObject>